--- a/index.html
+++ b/index.html
@@ -52,6 +52,39 @@
                 </div>
             </div>
         </section>
+        <!-- what i do section -->
+        <section class="what-i-do">
+            <h3 class="section-title">What I Do</h3>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-title">Vanilla Javascript</p>
+                    <p class="skill-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate neque, aliquam quibusdam facere quidem ad!</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <p class="skill-description">Non quasi cumque fugiat eius, corporis, perspiciatis commodi, aut numquam similique soluta amet totam fuga!</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-title">Node.js</p>
+                    <p class="skill-description">Reprehenderit rem ipsam, deserunt mollitia dolores totam vitae, quia tempore facilis placeat assumenda, deleniti temporibus.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-title">MongoDB</p>
+                    <p class="skill-description">Quaerat repellendus sit repudiandae blanditiis nostrum necessitatibus deleniti hic et ratione, repellat, debitis sint voluptas!</p>
+                </div>
+            </div>
+        </section>
+        <section>
+            <!-- summay section -->
+            <section class="resume">
+                <h3 class="section-title">A summary Of My Resume</h3>
+                
+            </section>
+        </section>
     </main>
     <footer>
 
