--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Portfolio</title>
+    <script src="https://kit.fontawesome.com/d00d1c3953.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style/portfolio.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +31,7 @@
                 <h1 class="banner-title">Mohammad Apon</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.
                     Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Dowload CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Dowload CV</button>
             </div>
             <img src="images/hardy.png" alt="">
         </div>
@@ -149,7 +150,7 @@
                     </div>
                 </div>
                 <div class="resume-button">
-                    <button class="btn-primary">Download CV</button>
+                    <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
                 </div>
             </section>
             <!-- contact section -->
