--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header class="header">
         <nav>
-            <h2 class="nav-title">Ma<span class="text-primary">r</span>y</h2>
+            <h2 class="nav-title">Ap<span class="text-primary">o</span>n</h2>
             <ul>
                 <li>Portfolio</li>
                 <li>Blog</li>
@@ -47,7 +47,7 @@
             <div class="about-info-container">
                 <div class="about-info">
                     <p class="info-title">Name:</p>
-                    <p class="info-description">Mary Hardy</p>
+                    <p class="info-description">Mohammad Apon</p>
                 </div>
                 <div class="about-info">
                     <p class="info-title">Email:</p>
